added dbmethods - working index page and some changes in create

--- a/IqansAppsForCTS/Views/MeetingRoomManager/Details.cshtml
+++ b/IqansAppsForCTS/Views/MeetingRoomManager/Details.cshtml
@@ -7,9 +7,16 @@
 <h2>Details</h2>
 
 <div>
-    <h4>MeetingRoom</h4>
+    <h4>Meeting Room</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.BookingId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.BookingId)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.RoomNumber)
         </dt>
@@ -19,19 +26,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.StartDate)
+            @Html.DisplayNameFor(model => model.EmpId)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.EndDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.EndDate)
+            @Html.DisplayFor(model => model.EmpId)
         </dd>
 
         <dt>
@@ -40,6 +39,22 @@
 
         <dd>
             @Html.DisplayFor(model => model.EmpName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.StartDateTime)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.StartDateTime)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.EndDateTime)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EndDateTime)
         </dd>
 
         <dt>
@@ -53,6 +68,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("Edit", "Edit", new { obj = Model }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
