--- a/IqansAppsForCTS/Views/MeetingRoomManager/test2.cshtml
+++ b/IqansAppsForCTS/Views/MeetingRoomManager/test2.cshtml
@@ -1,45 +1,50 @@
 ﻿@model IEnumerable<IqansAppsForCTS.Models.MeetingRoom>
 
 @{
-    ViewBag.Title = "Index";
+    Layout = null;
 }
 
-<h2>Meeting Room Manager - Index</h2>
+<!DOCTYPE html>
 
-<p>
-    <a class="btn btn-default" href="@Url.Action("Create", "MeetingRoomManager")">Book room for your meeting NOW!</a>
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.BookingId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RoomNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StartDateTime)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EndDateTime)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EmpName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EmpId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Subject)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Bookingtime)
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>test2</title>
+</head>
+<body>
+    <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.BookingId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RoomNumber)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StartDateTime)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EndDateTime)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EmpName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EmpId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Subject)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Bookingtime)
+            </th>
+            <th></th>
+        </tr>
+    
+    @foreach (var item in Model) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.BookingId)
@@ -72,7 +77,7 @@
             </td>
         </tr>
     }
-
-</table>
-
-
+    
+    </table>
+</body>
+</html>
