--- a/IqansAppsForCTS/Views/MeetingRoomManager/Index.cshtml
+++ b/IqansAppsForCTS/Views/MeetingRoomManager/Index.cshtml
@@ -65,11 +65,11 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Bookingtime)
             </td>
-            @*<td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+            <td>
+                @Html.ActionLink("Edit", "Edit", new {/* id=item.PrimaryKey */}) <br/>
+                @Html.ActionLink("Details", "Details", new {/* id=item.PrimaryKey */}) <br/>
                 @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>*@
+            </td>
         </tr>
     }
 
