--- a/IqansAppsForCTS/Views/MeetingRoomManager/Create.cshtml
+++ b/IqansAppsForCTS/Views/MeetingRoomManager/Create.cshtml
@@ -61,7 +61,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.EndDateTime, htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                <input type="datetime-local" class="form-control" name="StartDateTime" id="StartDateTime" />
+                <input type="datetime-local" class="form-control" name="EndDateTime" id="EndDateTime" />
                 @Html.ValidationMessageFor(model => model.EndDateTime, "", new {@class = "text-danger"})
             </div>
         </div>
