--- a/IqansAppsForCTS/Views/ForecastTool/Index.cshtml
+++ b/IqansAppsForCTS/Views/ForecastTool/Index.cshtml
@@ -9,20 +9,29 @@
     </div>
 </div>
 
-@using (Html.BeginForm())
+@if (false)
+{
+    using (Html.BeginForm())
+     {
+         <div class="container">
+             <table>
+                 <tbody>
+                 <tr>
+                     <td><b>Import File: </b></td>
+                     <td><input type="file" name="InputFile"/></td>
+                     @*<td>@Html.DropDownListFor()</td>*@
+                 </tr>
+                 <tr>
+                     <td><b>Import File: </b></td>
+                 </tr>
+                 </tbody>
+             </table>
+         </div>
+     }
+}
+else
 {
     <div class="container">
-        <table>
-            <tbody>
-            <tr>
-                <td><b>Import File: </b></td>
-                <td><input type="file" name="InputFile"/></td>
-                @*<td>@Html.DropDownListFor()</td>*@
-            </tr>
-            <tr>
-                <td><b>Import File: </b></td>
-            </tr>
-            </tbody>
-        </table>
+        <img src="~/Content/Images/Under-Construction1.jpg" width="800"/>
     </div>
 }
