major changes azure dep

--- a/IqansAppsForCTS/Views/Shared/_Layout.cshtml
+++ b/IqansAppsForCTS/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Iqan.in</p>
+            <p>&copy; @DateTime.Now.Year - Iqan.azurewebsites.net</p>
         </footer>
     </div>
 
