--- a/IqansAppsForCTS/Views/Bookings/Create.cshtml
+++ b/IqansAppsForCTS/Views/Bookings/Create.cshtml
@@ -1,21 +1,23 @@
-﻿@model IqansAppsForCTS.Models.MeetingRoom
+﻿@model IqansAppsForCTS.Models.Booking
 
 @{
     ViewBag.Title = "Create";
 }
 
-<h2>Book a Room</h2>
+<h2>Create</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <hr/>
-        @Html.ValidationSummary(true, "", new {@class = "text-danger"})
+        <h4>Booking</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
 
         <div class="form-group">
-            @Html.LabelFor(model => model.EmpId, htmlAttributes: new {@class = "control-label col-md-2"})
+            @Html.LabelFor(model => model.EmpId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.EmpId, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.EmpId, "", new { @class = "text-danger" })
@@ -23,7 +25,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.EmpName, htmlAttributes: new {@class = "control-label col-md-2"})
+            @Html.LabelFor(model => model.EmpName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.EmpName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.EmpName, "", new { @class = "text-danger" })
@@ -31,14 +33,14 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.RoomNumber, htmlAttributes: new {@class = "control-label col-md-2"})
+            @Html.LabelFor(model => model.RoomNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.RoomNumber, new List<SelectListItem> { 
-                       new SelectListItem { Value = "2C1" , Text = "2 C1" },
-                       new SelectListItem { Value = "2C2" , Text = "2 C2 (video)" }
+                @Html.DropDownListFor(model => model.RoomNumber, new List<SelectListItem> {
+                       new SelectListItem { Value = "2C1" , Text = "2C1 - VC room" },
+                       new SelectListItem { Value = "2C2" , Text = "2C1 - Meeting Room" }
                     },
                   new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.RoomNumber, "", new {@class = "text-danger"})
+                @Html.ValidationMessageFor(model => model.RoomNumber, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -51,24 +53,33 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.StartDateTime, htmlAttributes: new {@class = "control-label col-md-2"})
+            @Html.LabelFor(model => model.StartDateTime, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <input type="datetime-local" class="form-control" name="StartDateTime" id="StartDateTime" />
-                @Html.ValidationMessageFor(model => model.StartDateTime, "", new {@class = "text-danger"})
+                @Html.ValidationMessageFor(model => model.StartDateTime, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.EndDateTime, htmlAttributes: new {@class = "control-label col-md-2"})
+            @Html.LabelFor(model => model.EndDateTime, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <input type="datetime-local" class="form-control" name="EndDateTime" id="EndDateTime" />
-                @Html.ValidationMessageFor(model => model.EndDateTime, "", new {@class = "text-danger"})
+                @Html.ValidationMessageFor(model => model.EndDateTime, "", new { @class = "text-danger" })
             </div>
         </div>
+
+
+        @*<div class="form-group">
+            @Html.LabelFor(model => model.BookingTime, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.BookingTime, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.BookingTime, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default"/>
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
@@ -77,4 +88,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
