--- a/IqansAppsForCTS/Views/Bookings/Delete.cshtml
+++ b/IqansAppsForCTS/Views/Bookings/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model IqansAppsForCTS.Models.MeetingRoom
+﻿@model IqansAppsForCTS.Models.Booking
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>MeetingRoom</h4>
+    <h4>Booking</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -20,19 +20,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.StartDate)
+            @Html.DisplayNameFor(model => model.StartDateTime)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.StartDate)
+            @Html.DisplayFor(model => model.StartDateTime)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.EndDate)
+            @Html.DisplayNameFor(model => model.EndDateTime)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.EndDate)
+            @Html.DisplayFor(model => model.EndDateTime)
         </dd>
 
         <dt>
@@ -41,6 +41,22 @@
 
         <dd>
             @Html.DisplayFor(model => model.EmpName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.EmpId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EmpId)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.BookingTime)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.BookingTime)
         </dd>
 
         <dt>
