--- a/IqansAppsForCTS/Views/ForecastTool/Index.cshtml
+++ b/IqansAppsForCTS/Views/ForecastTool/Index.cshtml
@@ -32,6 +32,6 @@
 else
 {
     <div class="container">
-        <img src="~/Content/Images/Under-Construction1.jpg" width="800"/>
+        <img src="~/Content/Images/Under-Construction1.jpg" class="img-responsive" />
     </div>
 }
