--- a/IqansAppsForCTS/Views/Home/Index.cshtml
+++ b/IqansAppsForCTS/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
             Meeting Room is available or not?
             Book meeting room for your meeting from your desk only.
         </p>
-        <p><a class="btn btn-default" href="@Url.Action("Index","MeetingRoomManager")">Meeting Room Manager &raquo;</a></p>
+        <p><a class="btn btn-default" href="@Url.Action("Index","Bookings")">Meeting Room Manager &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>DevOps Forecast Tool</h2>
