--- a/IqansAppsForCTS/Views/Bookings/Create.cshtml
+++ b/IqansAppsForCTS/Views/Bookings/Create.cshtml
@@ -1,12 +1,29 @@
 ﻿@model IqansAppsForCTS.Models.Booking
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Book Now";
 }
 
-<h2>Create</h2>
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script>
+    $(document).ready(function () {
+        var now = new Date();
 
-@using (Html.BeginForm()) 
+        var day = ("0" + now.getDate()).slice(-2);
+        var month = ("0" + (now.getMonth() + 1)).slice(-2);
+        var today = now.getFullYear() + "-" + (month) + "-" + (day);
+        var hours = ("0" + now.getHours()).slice(-2);
+        var minutes = ("0" + now.getMinutes()).slice(-2);
+        var time = (hours) + ":" + (minutes);
+        $('#StartDate').val(today);
+        $('#StartDateTime').val(time);
+        $('#EndDateTime').val(time);
+    });
+</script>
+
+<h2>Book Now!</h2>
+
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
@@ -37,7 +54,7 @@
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.RoomNumber, new List<SelectListItem> {
                        new SelectListItem { Value = "2C1" , Text = "2C1 - VC room" },
-                       new SelectListItem { Value = "2C2" , Text = "2C1 - Meeting Room" }
+                       new SelectListItem { Value = "2C2" , Text = "2C2 - Meeting Room" }
                     },
                   new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.RoomNumber, "", new { @class = "text-danger" })
@@ -53,29 +70,33 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.StartDateTime, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Start Date", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input type="datetime-local" class="form-control" name="StartDateTime" id="StartDateTime" />
-                @Html.ValidationMessageFor(model => model.StartDateTime, "", new { @class = "text-danger" })
+                <input type="date" class="form-control" name="StartDate" id="StartDate" />
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.EndDateTime, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Start Time", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input type="datetime-local" class="form-control" name="EndDateTime" id="EndDateTime" />
-                @Html.ValidationMessageFor(model => model.EndDateTime, "", new { @class = "text-danger" })
+                <input type="time" class="form-control" name="StartDateTime" id="StartDateTime" />
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.Label("End Time", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <input type="time" class="form-control" name="EndDateTime" id="EndDateTime" />
             </div>
         </div>
 
 
         @*<div class="form-group">
-            @Html.LabelFor(model => model.BookingTime, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BookingTime, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.BookingTime, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
+                @Html.LabelFor(model => model.BookingTime, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.BookingTime, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.BookingTime, "", new { @class = "text-danger" })
+                </div>
+            </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
