--- a/IqansAppsForCTS/Views/Bookings/Create.cshtml
+++ b/IqansAppsForCTS/Views/Bookings/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model IqansAppsForCTS.Models.Booking
+﻿@model IqansAppsForCTS.Models.BookingNew
 
 @{
     ViewBag.Title = "Book Now";
@@ -33,13 +33,13 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.EmpId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.EmpId, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.EmpId, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.EmpName, htmlAttributes: new { @class = "control-label col-md-2" })
